use openjfx 12